fix smooth scroll on tablet, fix load order

--- a/app/assets/stylesheets/_breakpoints.scss
+++ b/app/assets/stylesheets/_breakpoints.scss
@@ -1,2 +1,3 @@
 $medium: new-breakpoint(751px);
 $small: new-breakpoint(max-width 750px);
+$tablet: new-breakpoint(max-device-width 1024px);
