--- a/app/assets/stylesheets/_portfolio-project.scss
+++ b/app/assets/stylesheets/_portfolio-project.scss
@@ -203,6 +203,14 @@ body#portfolio {
     }
   }
 
+  @include media($tablet) {
+    .case {
+      display: block;
+      position: static !important;
+      width: flex-grid(4) - flex-gutter() !important;
+    }
+  }
+
   @include media($small) {
     header {
       h2 {
